Исправила кнопки на ссылки

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <img src="http://placehold.it/75x22" alt="pink-logo">
       </div>
       <nav class="main-nav  main-nav--closed">
-        <button class="main-nav__toggle" type="button">Меню</button>
+        <a class="main-nav__toggle" href="#">Меню</a>
         <ul class="main-nav__list">
           <li class="main-nav__item"><a href="#">Главная</a></li>
           <li class="main-nav__item"><a href="#">Фотографии</a></li>
@@ -24,7 +24,7 @@
         <p class="intro__message">Взгляните на жизнь иначе!</p>
       </div>
       <div class="download">
-        <a class="button-1" href="#">Скачать приложение</a>
+        <a class="download-btn btn-default" href="#">Скачать приложение</a>
         <a class="download__apple" href="#">Apple</a>
         <a class="download__android" href="#">Android</a>
         <a class="download__windows" href="#">Windows</a>
