--- a/form.html
+++ b/form.html
@@ -21,61 +21,63 @@
     </header>
     <h2 class="page-title">Конкурс на самое безбашенное путешествие с Пинк</h2>
     <p class="page-descr">Поделитесь своей историей и получите шанс выиграть ценный приз - 1000 миль на вашу бонусную карту!</p>
-    <form class="contest-form">
-      <fieldset class="contest-form__full-name">
-        <label class="contest-form__label" for="surname">Фамилия:  </label>
-        <input class="contest-form__input" type="text" name="surmane" id="surname" placeholder="Укажите фамилию">
-        <label class="contest-form__label" for="name">Имя:</label>
-        <input class="contest-form__input" type="text" name="name" id="name" placeholder="Введите ваше имя">
-        <label class="contest-form__label" for="patronymic">Отчество:  </label>
-        <input class="contest-form__input" type="text" name="patronymic" id="patronymic" placeholder="Ну и отчество тоже">
-      </fieldset>
-      <fieldset class="contest-form__achievements">
-        <legend class="contest-form__legend">Ваши безбашенные достижения в путешествии</legend>
-        <input class="contest-form__checkbox" type="checkbox" name="selfie-with-shark" id="shark" checked>
-        <label class="contest-form__label-checkbox" for="shark">Сделал селфи с акулой</label>
-        <input class="contest-form__checkbox" type="checkbox" name="beach" id="beach" checked>
-        <label class="contest-form__label-checkbox" for="beach">Обгорел на пляже</label>
-        <input class="contest-form__checkbox" type="checkbox" name="chuck-norris" id="chuck-norris">
-        <label class="contest-form__label-checkbox" for="chuck-norris">Видел Чака Норриса</label>
-        <input class="contest-form__checkbox" type="checkbox" name="souvenirs" id="souvenirs">
-        <label class="contest-form__label-checkbox" for="souvenirs">Накупил сувениров</label>
-        <input class="contest-form__label-checkbox" type="checkbox" name="tower" id="tower" checked>
-        <label class="contest-form__label-checkbox" for="tower">Удержал башню</label>
-        <input class="contest-form__checkbox" type="checkbox" name="hotel" id="hotel">
-        <label class="contest-form__label-checkbox" for="hotel">Разгромил отель</label>
-      </fieldset>
-      <fieldset class="contest-form__contacts">
-        <label class="contest-form__label" for="phone">Номерок телефончика</label>
-        <input class="contest-form__input" type="tel" name="phone" id="phone" placeholder="Номер, пожалуйста">
-          <label class="contest-form__label" for="email">Адресок почты</label>
-        <input class="contest-form__input" type="email" name="email" id="email" placeholder="Введите почту">
-      </fieldset>
-      <fieldset class="contest-form__app">
-        <legend class="contest-form__legend">С каким приложением путешествовали?</legend>
-        <input class="contest-form__radio" type="radio" name="app" value="iOS" id="iOS" checked>
-        <label class="contest-form__label-radio" for="iOS">Pink для iOS</label>
-        <input class="contest-form__radio" type="radio" name="app" value="android" id="android">
-        <label class="contest-form__label-radio" for="android">Pink на Android</label>
-        <input class="contest-form__radio" type="radio" name="app" value="windows" id="windows">
-        <label class="contest-form__label-radio" for="windows">Windows Phone</label>
-      </fieldset>
-      <fieldset class="contest-form__emotions">
-        <legend class="contest-form__legend">Опишите свои эмоции</legend>
-        <textarea rows="5" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
-      </fieldset>
-      <button class="button" type="submit" value="submit">Отправить форму</button>
-      <p class="contest-form__required">* - Обязательные поля</p>
-    </form>
+    <div class="contest-form">
+      <form action="#" method="get">
+        <fieldset class="contest-form__full-name">
+          <label class="contest-form__label" for="surname">Фамилия:  </label>
+          <input class="contest-form__input" type="text" name="surmane" id="surname" placeholder="Укажите фамилию">
+          <label class="contest-form__label" for="name">Имя:</label>
+          <input class="contest-form__input" type="text" name="name" id="name" placeholder="Введите ваше имя">
+          <label class="contest-form__label" for="patronymic">Отчество:  </label>
+          <input class="contest-form__input" type="text" name="patronymic" id="patronymic" placeholder="Ну и отчество тоже">
+        </fieldset>
+        <fieldset class="contest-form__achievements">
+          <legend class="contest-form__legend">Ваши безбашенные достижения в путешествии</legend>
+          <input class="contest-form__checkbox" type="checkbox" name="selfie-with-shark" id="shark" checked>
+          <label class="contest-form__label-checkbox" for="shark">Сделал селфи с акулой</label>
+          <input class="contest-form__checkbox" type="checkbox" name="beach" id="beach" checked>
+          <label class="contest-form__label-checkbox" for="beach">Обгорел на пляже</label>
+          <input class="contest-form__checkbox" type="checkbox" name="chuck-norris" id="chuck-norris">
+          <label class="contest-form__label-checkbox" for="chuck-norris">Видел Чака Норриса</label>
+          <input class="contest-form__checkbox" type="checkbox" name="souvenirs" id="souvenirs">
+          <label class="contest-form__label-checkbox" for="souvenirs">Накупил сувениров</label>
+          <input class="contest-form__label-checkbox" type="checkbox" name="tower" id="tower" checked>
+          <label class="contest-form__label-checkbox" for="tower">Удержал башню</label>
+          <input class="contest-form__checkbox" type="checkbox" name="hotel" id="hotel">
+          <label class="contest-form__label-checkbox" for="hotel">Разгромил отель</label>
+        </fieldset>
+        <fieldset class="contest-form__contacts">
+          <label class="contest-form__label" for="phone">Номерок телефончика</label>
+          <input class="contest-form__input" type="tel" name="phone" id="phone" placeholder="Номер, пожалуйста">
+            <label class="contest-form__label" for="email">Адресок почты</label>
+          <input class="contest-form__input" type="email" name="email" id="email" placeholder="Введите почту">
+        </fieldset>
+        <fieldset class="contest-form__app">
+          <legend class="contest-form__legend">С каким приложением путешествовали?</legend>
+          <input class="contest-form__radio" type="radio" name="app" value="iOS" id="iOS" checked>
+          <label class="contest-form__label-radio" for="iOS">Pink для iOS</label>
+          <input class="contest-form__radio" type="radio" name="app" value="android" id="android">
+          <label class="contest-form__label-radio" for="android">Pink на Android</label>
+          <input class="contest-form__radio" type="radio" name="app" value="windows" id="windows">
+          <label class="contest-form__label-radio" for="windows">Windows Phone</label>
+        </fieldset>
+        <fieldset class="contest-form__emotions">
+          <legend class="contest-form__legend">Опишите свои эмоции</legend>
+          <textarea rows="5" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+        </fieldset>
+        <button class="button" type="submit" value="submit">Отправить форму</button>
+        <p class="contest-form__required">* - Обязательные поля</p>
+      </form>
+    </div>
     <div class="popup">
       <p class="popup__title">Что-то пошло не так!</p>
       <p class="popup__text">Проверьте поля, выведенные красным, скорее всего вы забыли их заполнить</p>
-      <button class="button" type="button">OK</button>
+      <a class="popup-btn btn-default" >OK</a>
     </div>
     <div class="popup">
       <p class="popup__title">Ваша заявка отправлена</p>
       <p class="popup__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
-      <button class="button" type="button">Закрыть окно</button>
+      <a class="popup-btn btn-default">Закрыть окно</a>
     </div>
     <footer class="page-footer">
       <div class="image-logo">
