--- a/form.html
+++ b/form.html
@@ -72,12 +72,12 @@
     <div class="popup">
       <p class="popup__title">Что-то пошло не так!</p>
       <p class="popup__text">Проверьте поля, выведенные красным, скорее всего вы забыли их заполнить</p>
-      <a class="popup-btn btn-default" >OK</a>
+      <a class="popup-btn btn-default" href="#">OK</a>
     </div>
     <div class="popup">
       <p class="popup__title">Ваша заявка отправлена</p>
       <p class="popup__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
-      <a class="popup-btn btn-default">Закрыть окно</a>
+      <a class="popup-btn btn-default" href="#">Закрыть окно</a>
     </div>
     <footer class="page-footer">
       <div class="image-logo">
