--- a/form.html
+++ b/form.html
@@ -3,19 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="body">
     <header class="main-header">
       <div class="logo">
-        <img src="http://placehold.it/75x22" alt="pink-logo">
+        <img src="img/logo-pink-white-mobile.svg" alt="pink-logo" width="75" height="23">
       </div>
       <nav class="main-nav  main-nav--closed">
-        <button class="main-nav__toggle" type="button">Меню</button>
+        <a class="main-nav__toggle" href="#">Меню</a>
         <ul class="main-nav__list">
-          <li class="main-nav__item"><a href="#">Главная</a></li>
-          <li class="main-nav__item"><a href="#">Фотографии</a></li>
-          <li class="main-nav__item"><a href="#">Конкурс</a></li>
-          <li class="main-nav__item"><a href="#">Html Academy</a></li>
+          <li class="main-nav__item"><a class="main-nav__link" href="#">Главная</a></li>
+          <li class="main-nav__item"><a class="main-nav__link" href="#">Фотографии</a></li>
+          <li class="main-nav__item"><a class="main-nav__link" href="#">Конкурс</a></li>
+          <li class="main-nav__item"><a class="main-nav__link" href="#">Html Academy</a></li>
         </ul>
       </nav>
     </header>
@@ -23,65 +25,87 @@
     <p class="page-descr">Поделитесь своей историей и получите шанс выиграть ценный приз - 1000 миль на вашу бонусную карту!</p>
     <div class="contest-form">
       <form action="#" method="get">
-        <fieldset class="contest-form__full-name">
+        <div class="contest-form__full-name">
           <label class="contest-form__label" for="surname">Фамилия:  </label>
           <input class="contest-form__input" type="text" name="surmane" id="surname" placeholder="Укажите фамилию">
           <label class="contest-form__label" for="name">Имя:</label>
           <input class="contest-form__input" type="text" name="name" id="name" placeholder="Введите ваше имя">
           <label class="contest-form__label" for="patronymic">Отчество:  </label>
           <input class="contest-form__input" type="text" name="patronymic" id="patronymic" placeholder="Ну и отчество тоже">
-        </fieldset>
-        <fieldset class="contest-form__achievements">
-          <legend class="contest-form__legend">Ваши безбашенные достижения в путешествии</legend>
-          <input class="contest-form__checkbox" type="checkbox" name="selfie-with-shark" id="shark" checked>
-          <label class="contest-form__label-checkbox" for="shark">Сделал селфи с акулой</label>
-          <input class="contest-form__checkbox" type="checkbox" name="beach" id="beach" checked>
-          <label class="contest-form__label-checkbox" for="beach">Обгорел на пляже</label>
-          <input class="contest-form__checkbox" type="checkbox" name="chuck-norris" id="chuck-norris">
-          <label class="contest-form__label-checkbox" for="chuck-norris">Видел Чака Норриса</label>
-          <input class="contest-form__checkbox" type="checkbox" name="souvenirs" id="souvenirs">
-          <label class="contest-form__label-checkbox" for="souvenirs">Накупил сувениров</label>
-          <input class="contest-form__label-checkbox" type="checkbox" name="tower" id="tower" checked>
-          <label class="contest-form__label-checkbox" for="tower">Удержал башню</label>
-          <input class="contest-form__checkbox" type="checkbox" name="hotel" id="hotel">
-          <label class="contest-form__label-checkbox" for="hotel">Разгромил отель</label>
-        </fieldset>
-        <fieldset class="contest-form__contacts">
+        </div>
+        <div class="contest-form__achievements">
+          <h3 class="contest-form__title">Ваши безбашенные <br> достижения в путешествии</h3>
+          <ul class="contest-form__list">
+            <li class="contest-form__list-item">
+              <input class="contest-form__checkbox" type="checkbox" name="selfie-with-shark" id="shark" checked>
+              <label class="contest-form__label-checkbox" for="shark">Сделал селфи с акулой</label>
+            </li>
+            <li class="contest-form__list-item">
+              <input class="contest-form__checkbox" type="checkbox" name="beach" id="beach" checked>
+              <label class="contest-form__label-checkbox" for="beach">Обгорел на пляже</label>
+            </li>
+            <li class="contest-form__list-item">
+              <input class="contest-form__checkbox" type="checkbox" name="chuck-norris" id="chuck-norris">
+              <label class="contest-form__label-checkbox" for="chuck-norris">Видел Чака Норриса</label>
+            </li>
+            <li class="contest-form__list-item">
+              <input class="contest-form__checkbox" type="checkbox" name="souvenirs" id="souvenirs">
+              <label class="contest-form__label-checkbox" for="souvenirs">Накупил сувениров</label>
+            </li>
+            <li class="contest-form__list-item">
+              <input class="contest-form__checkbox" type="checkbox" name="tower" id="tower" checked>
+              <label class="contest-form__label-checkbox" for="tower">Удержал башню</label>
+            </li>
+            <li class="contest-form__list-item">
+              <input class="contest-form__checkbox" type="checkbox" name="hotel" id="hotel">
+              <label class="contest-form__label-checkbox" for="hotel">Разгромил отель</label>
+            </li>
+          </ul>
+        </div>
+        <div class="contest-form__contacts">
           <label class="contest-form__label" for="phone">Номерок телефончика</label>
           <input class="contest-form__input" type="tel" name="phone" id="phone" placeholder="Номер, пожалуйста">
             <label class="contest-form__label" for="email">Адресок почты</label>
           <input class="contest-form__input" type="email" name="email" id="email" placeholder="Введите почту">
-        </fieldset>
-        <fieldset class="contest-form__app">
-          <legend class="contest-form__legend">С каким приложением путешествовали?</legend>
-          <input class="contest-form__radio" type="radio" name="app" value="iOS" id="iOS" checked>
-          <label class="contest-form__label-radio" for="iOS">Pink для iOS</label>
-          <input class="contest-form__radio" type="radio" name="app" value="android" id="android">
-          <label class="contest-form__label-radio" for="android">Pink на Android</label>
-          <input class="contest-form__radio" type="radio" name="app" value="windows" id="windows">
-          <label class="contest-form__label-radio" for="windows">Windows Phone</label>
-        </fieldset>
-        <fieldset class="contest-form__emotions">
-          <legend class="contest-form__legend">Опишите свои эмоции</legend>
-          <textarea rows="5" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
-        </fieldset>
-        <button class="button" type="submit" value="submit">Отправить форму</button>
-        <p class="contest-form__required">* - Обязательные поля</p>
+        </div>
+        <div class="contest-form__app">
+          <h3 class="contest-form__title">С каким приложением путешествовали?</h3>
+          <ul class="contest-form__list">
+            <li class="contest-form__list-item">
+              <input class="contest-form__radio" type="radio" name="app" value="iOS" id="iOS" checked>
+              <label class="contest-form__label-radio" for="iOS">Pink для iOS</label>
+            </li>
+            <li class="contest-form__list-item">
+              <input class="contest-form__radio" type="radio" name="app" value="android" id="android">
+              <label class="contest-form__label-radio" for="android">Pink на Android</label>
+            </li>
+            <li class="contest-form__list-item">
+              <input class="contest-form__radio" type="radio" name="app" value="windows" id="windows">
+              <label class="contest-form__label-radio" for="windows">Windows Phone</label>
+            </li>
+          </ul>
+        </div>
+        <div class="contest-form__emotions">
+          <h3 class="contest-form__title">Опишите свои эмоции</h3>
+          <textarea class="contest-form__textarea" rows="5" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+        </div>
+        <button class="form-btn" type="submit" value="submit">Отправить форму</button>
+        <p class="contest-form__required"><span class="contest-form__star">*</span> - Обязательные поля</p>
       </form>
     </div>
     <div class="popup">
       <p class="popup__title">Что-то пошло не так!</p>
       <p class="popup__text">Проверьте поля, выведенные красным, скорее всего вы забыли их заполнить</p>
-      <a class="popup-btn btn-default" href="#">OK</a>
+      <a class="popup-btn" href="#">OK</a>
     </div>
     <div class="popup">
       <p class="popup__title">Ваша заявка отправлена</p>
       <p class="popup__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
-      <a class="popup-btn btn-default" href="#">Закрыть окно</a>
+      <a class="popup-btn" href="#">Закрыть окно</a>
     </div>
     <footer class="page-footer">
       <div class="image-logo">
-        <img src="http://placehold.it/147x40" alt="pink-logo">
+        <img src="img/logo-pink-blue-mobile.svg" alt="pink-logo">
       </div>
       <div class="social">
         <a class="social__item" href="#">Twitter</a>
@@ -91,7 +115,7 @@
       <div class="page-footer__copyright">
         <span class="page-footer__developed">Разработано</span>
         <a class="html-academy-logo" href="#">
-          <img src="http://placehold.it/27x34" alt="html-academy-logo">
+          <img src="img/logo-htmlacademy.svg" alt="html-academy-logo">
         </a>
       </div>
     </footer>
