--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="main-header">
      <nav class="main-nav">
         <div class="main-nav__wrapper">
-          <div class="main-nav__short-menu">
+          <div class="main-nav__short-menu  main-nav__short-menu--closed">
             <div class="logo">
               <img src="img/logo-pink-white-mobile.svg" alt="pink-logo" width="75" height="23">
             </div>
@@ -31,7 +31,7 @@
           <p class="hero-area__message">Взгляните <br> на жизнь  иначе!</p>
           <div class="intro"></div>
           <div class="download">
-            <a class="download-btn btn-default" href="#">Скачать приложение</a>
+            <a class="btn-default download-btn" href="#">Скачать приложение</a>
             <div class="download__os">
               <a class="download__apple" href="#">Apple</a>
               <a class="download__android" href="#">Android</a>
@@ -85,6 +85,7 @@
       </div>
       <div class="price">
         <div class="price-table">
+          <div class="price-table__wrapper">
           <ul class="price-table__column">
             <li class="price-table__item">Розовый фильтр</li>
             <li class="price-table__item">Смайлики</li>
@@ -108,6 +109,7 @@
             <li class="price-table__item">+</li>
             <li class="price-table__item">+</li>
           </ul>
+          </div>
         </div>
         <div class="price__radiobuttons">
           <label class="price__label" for="plan-1">1</label>
