--- a/photo.html
+++ b/photo.html
@@ -10,7 +10,7 @@
     <header class="main-header">
      <nav class="main-nav">
         <div class="main-nav__wrapper">
-          <div class="main-nav__short-menu">
+          <div class="main-nav__short-menu  main-nav__short-menu--closed">
             <div class="logo">
               <img src="img/logo-pink-white-mobile.svg" alt="pink-logo" width="75" height="23">
             </div>
@@ -124,8 +124,8 @@
             <div class="photo-edit__control"></div>
           </div>
           <div class="btn-wrapper">
-            <a class="post-btn btn-default" href="#">Запостить</a>
-            <a class="btn-non-active btn-default" href="#">Отмена</a>
+            <a class="btn-default post-btn" href="#">Запостить</a>
+            <a class="btn-default btn-non-active" href="#">Отмена</a>
           </div>
         </div>
       </div>
